--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -15,7 +15,6 @@
 }
 .container .join .join-con{
     flex-basis: 800px;
-
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -33,62 +32,73 @@
 }
 /* button */
 .container .join .join-con .button{
-    height: 20px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px;
+    box-sizing: border-box;
+    text-align: center;
+}
+/*  일반 회원가입 버튼 */
+.container .join .join-con .button .joinBtn{
     display: flex;
     justify-content: center;
     padding: 30px;
     box-sizing: border-box;
     align-items: center;
-}
-/*  일반 회원가입 버튼 */
-.container .join .join-con .button .joinBtn{
-    position: relative;
-    display: inline-block;
-    font-size: 22px;
-    padding: 20px 60px;
-    color: white;
-    margin: 20px 10px 10px;
-    border-radius:10px;
     text-align: center;
-    transition: top .01s linear;
-    text-shadow: 0 1px 0 #19244F;  
-
-    background-color: #5870CB;
-    box-shadow: 0 0 0 1px #1d2a5ca9 inset,
-          0 0 0 2px #3E5AC3 inset,
-          0 8px 0 0 #7286D3,
-          0 8px 0 1px #111835,
-          0 8px 8px 1px #111835;
 }
-.container .join .join-con .button .joinBtn:hover{
-    background-color: #7285d3;
+.container .join .join-con .button .joinBtn .jBtn{
+    width: 120px;
+    height: 30px;
+    flex: 1;
+    padding: 30px ;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 15px;
+    border-top: 1px solid #7285d3;
+    border-right: 1px solid #7285d3;
+    border-left: 30px solid #7285d3;
+    border-bottom: 1px solid #7285d3;
+    transition: all 0.3s;
+    background: transparent;
 }
-.container .join .join-con .button .joinBtn:active{
-    top: 9px;
+.container .join .join-con .button .jBtn:hover{
+    border-left-width: 4px;
 }
 /* 간편 회원가입 버튼 */
-.container .join .join-con .button .semijoinBtn{
-    position: relative;
-    display: inline-block;
-    font-size: 22px;
-    padding: 20px 60px;
-    color: white;
-    margin: 20px 10px 10px;
-    border-radius: 10px;
+.container .join .join-con .button .semiBtn{
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    box-sizing: border-box;
+    align-items: center;
     text-align: center;
-    transition: top .01s linear;
-    text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
-
-    background-color: #5870CB;
-    box-shadow: 0 0 0 1px #1d2a5ca9 inset,
-          0 0 0 2px #3E5AC3 inset,
-          0 8px 0 0 #7286D3,
-          0 8px 0 1px #111835,
-          0 8px 8px 1px #111835;
 }
-.container .join .join-con .button .semijoinBtn:hover{
-    background-color: #7285d3;
+.container .join .join-con .button .semiBtn .sBtn{
+    width: 120px;
+    height: 30px;
+    flex: 1;
+    padding: 30px ;
+    box-sizing: border-box;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    font-size: 15px;
+    border-top: 1px solid #7285d3;
+    border-right: 1px solid #7285d3;
+    border-left: 30px solid #7285d3;
+    border-bottom: 1px solid #7285d3;
+    transition: all 0.3s;
+    background: transparent;
 }
-.container .join .join-con .button .semijoinBtn:active{
-    top: 9px;
+.container .join .join-con .button .sBtn:hover{
+    border-left-width: 4px;
 }
