--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,14 +20,14 @@
         <div class="top">
             <div class="topBtn">
                 <a href="#header">
-                    <div class="moveBtnTop">△</div>
+                    <div class="moveBtnTop">↑</div>
                 </a>
             </div>
          </div>
          <div class="bottom">
             <div class="bottomBtn">
                 <a href="#footer">
-                    <div class="moveBtnBotton">▽</div>
+                    <div class="moveBtnBotton">↓</div>
                 </a>
                 
             </div>
