--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -41,7 +41,7 @@
                         <a th:href="@{/inquiry/update/{id}(id=${inquiryDto.inqId})}">수정하기</a>
                     </li>
                     <li>
-                        <a th:href="@{/inquiry/list}">LIST</a>
+                        <a th:href="@{/inquiry/list?page=0&select&search=}">LIST</a>
                     </li>
                 </ul>
             </div>
