--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -42,7 +42,7 @@
                         <a th:href="@{/notice/update/{id}(id=${noticeDto.notId})}">수정하기</a>
                     </li>
                     <li>
-                        <a th:href="@{/notice/list}" class="list">LIST</a>
+                        <a th:href="@{/notice/list?page=0&select=&search=}" class="list">LIST</a>
                     </li>
                 </ul>
             </div>
