--- a/src/main/resources/templates/notice/write.html
+++ b/src/main/resources/templates/notice/write.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/notice/write.css}">
 </head>
 <body>
-<div th:replace="~{fragments/common/kreamHeader :: headerFragment}"></div>
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
     <div class="container">
         <div class="write">
             <div class="write-con">
