--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -22,6 +22,7 @@
     text-align: center;
     gap: 50px;
 }
+/* 제목 */
 .container .join .join-con .title{
     padding: 20px;
     gap: 10px;
@@ -67,6 +68,7 @@
     border-bottom: 1px solid #7285d3;
     transition: all 0.3s;
     background: transparent;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
 }
 .container .join .join-con .button .jBtn:hover{
     border-left-width: 4px;
@@ -98,6 +100,7 @@
     border-bottom: 1px solid #7285d3;
     transition: all 0.3s;
     background: transparent;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
 }
 .container .join .join-con .button .sBtn:hover{
     border-left-width: 4px;
