--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -68,6 +68,7 @@
     border-bottom: 1px solid #7285d3;
     transition: all 0.3s;
     background: transparent;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
 }
 .container .login .login-con .login-form .loginBtn .loginA:hover{
     border-left-width: 4px;
@@ -99,6 +100,7 @@
     border-bottom: 1px solid #7285d3;
     transition: all 0.3s;
     background: transparent;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
 }
 .container .login .login-con .login-form .semiBtn .semilogin:hover{
     border-left-width: 4px;
