--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -11,6 +11,7 @@
     <script th:src="@{/js/member/confirmPw_join.js}" defer="defer"></script>
     <script th:src="@{/js/member/email.js}" defer="defer"></script>
     <script th:src="@{/js/member/join.js}" defer="defer"></script>
+    <script th:src="@{js/member/button.js}" defer="defer"></script> <!-- html을 위한 자바스크립트-->
     <script th:src="@{/js/member/join_birth.js}" defer="defer"></script>
     <script src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></script> <!-- 카카오 주소 api -->
     <script th:src="@{/js/member/addressApi.js}" defer="defer"></script> <!-- 카카오 주소 api -->
@@ -27,53 +28,58 @@
             <form th:action="@{/member/join}" method="post" id="signupForm" th:object="${memberDto}">
                 <ul>
                     <li>
-                        <label th:for="memberEmail">이메일</label>
-                        <input type="email" th:field="*{memberEmail}" required="required" placeholder="이메일 입력">
-                        <button type="button" id="emailCheckButton">이메일 중복 확인</button>
+                        <div class="email">
+                            <label th:for="memberEmail">이메일</label>
+                            <input type="email" th:field="*{memberEmail}" required="required" placeholder="이메일 입력" class="box">
+                            <button type="button" id="emailCheckButton">이메일 중복 확인</button>
+                        </div>
                     </li>
-                    <p th:if="${#fields.hasErrors('memberEmail')}" th:errors="*{memberEmail}" class="error"></p>
+                        <p th:if="${#fields.hasErrors('memberEmail')}" th:errors="*{memberEmail}" class="error"></p>
                     <li>
                         <d id="emailAvailable" class="valid-feedback" style="display: none;"></d>
                         <d id="emailNotAvailable" class="invalid-feedback" style="display: none;"></d>
                     </li>
-                    <!-- 인증번호 입력란 -->
-                    <li>
-                        <label th:for="emailVerificationCode">인증번호</label>
-                        <input type="text" id="emailVerificationCode" placeholder="인증번호 입력">
-                        <button type="button" id="verifyEmailButton">인증번호 확인</button>
-                    </li>
-                    <!-- 이메일 인증 버튼 -->
-                    <li>
-                        <button type="button" id="certifyEmailButton">인증번호 전송</button>
-                    </li>
+                      <!-- 이메일 인증 버튼 -->
+                    <!-- <li class="nopeli">
+                        <button type="button" id="certifyEmailButton" class="nopeBtn">인증번호 전송</button>
+                    </li> -->
                     <!-- 인증 결과 메시지 영역 -->
                     <li>
                         <div id="certifyEmailMessage" class="valid-feedback" style="display: none;"></div>
                     </li>
+                    <!-- 인증번호 입력란 -->
+                    <li>
+                        <div class="code">
+                            <label th:for="emailVerificationCode" >인증번호</label>
+                            <input type="text" id="emailVerificationCode" placeholder="인증번호 입력" class="box">
+                            <button type="button" id="certifyEmailButton" th:onclick="submitevent">인증번호 전송</button>
+                            <button type="button" id="verifyEmailButton" class="hidden">인증번호 확인</button>
+                        </div>
+                    </li>
                     <li>
                         <label th:for="memberPassword">비밀번호</label>
-                        <input type="password" th:field="*{memberPassword}" required="required" placeholder="최소 하나의 특수문자, 알파벳, 숫자를 포함해야 합니다">
+                        <input type="password" th:field="*{memberPassword}" required="required" placeholder="최소 하나의 특수문자, 알파벳, 숫자를 포함해야 합니다" class="box">
                     </li>
                     <p th:if="${#fields.hasErrors('memberPassword')}" th:errors="*{memberPassword}" class="error"></p>
                     <li>
                         <label th:for="confirmPassword">비밀번호 확인</label>
-                        <input type="password" th:field="*{confirmPassword}" required="required" placeholder="위와 동일한 비밀번호 입력">
+                        <input type="password" th:field="*{confirmPassword}" required="required" placeholder="위와 동일한 비밀번호 입력" class="box">
                     </li>
                     <p th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}" class="error"></p>
                     <font id="checkMessage" size="2"></font>
                     <li>
                         <label th:for="memberName">이름</label>
-                        <input type="text" th:field="*{memberName}" required="required" placeholder="한글과 영문만 입력 가능합니다">
+                        <input type="text" th:field="*{memberName}" required="required" placeholder="한글과 영문만 입력 가능합니다" class="box">
                     </li>
                     <p th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}" class="error"></p>
                     <li>
                         <label th:for="memberNickName">닉네임</label>
-                        <input type="text" th:field="*{memberNickName}" required="required" placeholder="닉네임 입력">
+                        <input type="text" th:field="*{memberNickName}" required="required" placeholder="닉네임 입력" class="box">
                     </li>
                     <p th:if="${#fields.hasErrors('memberNickName')}" th:errors="*{memberNickName}" class="error"></p>
                     <!-- 닉네임 중복 확인 버튼 -->
-                    <li>
-                        <button type="button" id="nickNameCheckButton">닉네임 중복 확인</button>
+                    <li class="nopeli">
+                        <button type="button" id="nickNameCheckButton" class="nopeBtn">닉네임 중복 확인</button>
                     </li>
                     <!-- 중복 확인 결과 메시지 영역 -->
                     <li>
@@ -82,12 +88,12 @@
                     </li>
                     <li>
                         <label th:for="memberPhone">휴대전화</label>
-                        <input type="text" th:field="*{memberPhone}" required="required" placeholder="- 제외하고 입력해주세요">
+                        <input type="text" th:field="*{memberPhone}" required="required" placeholder="- 제외하고 입력해주세요" class="box">
                     </li>
                     <p th:if="${#fields.hasErrors('memberPhone')}" th:errors="*{memberPhone}" class="error"></p>
                     <!-- 닉네임 중복 확인 버튼 -->
-                    <li>
-                        <button type="button" id="phoneCheckButton">휴대전화 중복 확인</button>
+                    <li class="nopeli">
+                        <button type="button" id="phoneCheckButton" class="nopeBtn">휴대전화 중복 확인</button>
                     </li>
                     <!-- 중복 확인 결과 메시지 영역 -->
                     <li>
@@ -96,7 +102,7 @@
                     </li>
                     <li>
                         <label th:for="memberBirth">생년월일</label>
-                        <input type="text" th:field="*{memberBirth}" required="required" placeholder="ex)21001031">
+                        <input type="text" th:field="*{memberBirth}" required="required" placeholder="ex)21001031" class="box">
                     </li>
                     <p th:if="${#fields.hasErrors('memberBirth')}" th:errors="*{memberBirth}" class="error"></p>
                     <div class="form-group">
