--- a/src/main/resources/static/css/admin/index.css
+++ b/src/main/resources/static/css/admin/index.css
@@ -7,12 +7,33 @@
 
   /* header */
 
+
+  *{
+    margin: 0;
+    padding: 0;
+  }
+  html,body{
+    width: 100%;
+    min-height:100%;
+  }
+  ul,li{
+    list-style: none;
+  }
+  a{
+    text-decoration: none;
+    color: #000;
+  }
+
+  button{
+    border: 0;
+    background-color: transparent;
+  }
+
   .header{
     width: 100%;
     height: 80px;
     padding: 20px;
     background-color: #cdd4ef;
-    margin-bottom: 20px;
 
   }
 
@@ -33,15 +54,24 @@
     width: 40%;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: center;
   }
 
   .header .top-nav ul li{
     padding : 5px;
-    width: 70px;
+    width: 100px;
+    text-align: center;
+    box-sizing: border-box;
+    background-color: white;
+    border: 1px solid #8C9CDB;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
+
 
   }
 
-  /* sideBar */
+  /* sideBar ========================================================== */
 
   :root {
     --side-bar-width: 200px;
@@ -102,7 +132,13 @@
   }
 
 
- /* main */
+ /* main ============================================================================*/
+
+.main{
+  background-color: #F0F2F5;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
 .container {
     width: 70%;
@@ -125,6 +161,14 @@
 .container .main-section1 ul li{
     text-align: center;
     line-height: 400px;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 20px 10px;
+    background-color: white;
+    border: 1px solid #8C9CDB;
+    border-radius: 10px;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px 0px #8C9CDB, inset 0px -2px 4px -1px #8c9cdb98;
 
 }
 
