--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -24,7 +24,7 @@
         <ul>
             <li>로그 아웃</li>
             <li>상품 관리</li>
-            <li><a th:href=@{"/product/write"}>상품생성</a></li>
+            <li><a href="/product/write">상품생성</a></li>
             <li>고객 관리</li>
         </ul>
     </div>
@@ -54,7 +54,7 @@
                 상품 관리
                 <ul>
                     <li>
-                        <a href="#">상품생성</a>
+                        <a href="/product/write">상품생성</a>
                     </li>
                     <li>
                         <a href="#">상품 리스트</a>
@@ -92,7 +92,7 @@
                     상품 관리
                 </li>
                 <li>
-                    <a href="product/write">상품생성</a>
+                    <a href="/product/write">상품생성</a>
                 </li>
                 <li>
                     주문 목록
