--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,6 +22,11 @@
                     <h1>로그인</h1>
                 </div>
                 <div class="login-form">
+
+                    <div class="adminBtn loginBtn">
+                        <a href="/admin/index" class="loginA">관리자 로그인</a>
+                    </div>
+
                     <div class="loginBtn">
                         <a th:href="@{/member/login}" class="loginA">일반회원 로그인</a>
                     </div>
