--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -51,10 +51,10 @@
         <th>설명</th>
         <td th:text="${product.productDescription}"></td>
     </tr>
-    <tr>
-        <th>상품작성자</th>
-        <td th:text="${product.productWriter}"></td>
-    </tr>
+<!--    <tr>-->
+<!--        <th>상품작성자</th>-->
+<!--        <td th:text="${product.productWriter}"></td>-->
+<!--    </tr>-->
     <!-- 송원철 -->
     <tr>
         <th>상품가격</th>
