--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -53,7 +53,7 @@
     </tr>
     <tr>
         <th>상품작성자</th>
-        <td th:text="${product.productWriter}"></td>
+        <td th:text="${product.member.memberNickName}"></td>
     </tr>
     <!-- 송원철 -->
     <tr>
