--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -21,7 +21,9 @@
     <td th:text="${product.id}"></td>
     <td><img th:src="@{/images/{filename}(filename=${productImages[stat.index].productImgSavedName})}" alt="" height="50"/></td>
     <td><a th:href="@{|/product/${product.id}|}" th:text="${product.productName}"></a></td>
-    <td th:text="${product.productWriter}"></td>
+<!--    <td th:text="${product.productWriter}"></td>-->
+    <td th:text="${product.member.memberNickName}"></td>
+    <td th:text="${#authentication.principal.memberEntity.memberNickName}"></td>
     <td th:text="${#temporals.format(product.productCreateTime, 'yy/MM/dd HH:mm')}"></td>
     <td th:text="${product.productHits}"></td>
   </tr>
